<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <RadioGroup
        android:id="@+id/top_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/about_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/green_white_tab"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/about_us"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/feedback_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/green_white_tab"
            android:button="@null"
            android:gravity="center"
            android:text="@string/feedback"
            android:textColor="@color/text_default"
            android:textSize="18sp" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shadow_line_gadarene" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--关于我们-->
            <LinearLayout
                android:id="@+id/about_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />

                <!--客服电话-->
                <LinearLayout
                    android:id="@+id/service_tel_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/abc_list_selector_holo_dark"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/default_padding">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/service_tel" />

                    <TextView
                        android:id="@+id/service_tel_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0512-66231568"
                        android:textColor="@color/text_orange" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />

                <!--客服QQ-->
                <LinearLayout
                    android:id="@+id/service_qq_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/abc_list_selector_holo_dark"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:padding="@dimen/default_padding">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/service_qq" />

                    <TextView
                        android:id="@+id/service_qq_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1.0"
                        android:textColor="@color/text_orange" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />

            </LinearLayout>

            <!--意见反馈-->
            <LinearLayout
                android:id="@+id/feedback_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/default_padding"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_tips"
                    android:textColor="@color/text_orange" />

                <EditText
                    android:id="@+id/feedback_edit"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@drawable/edit_frame_orange"
                    android:gravity="top|left"
                    android:textCursorDrawable="@null" />

                <Button
                    android:id="@+id/fb_send_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@drawable/orange_btn_with_radius"
                    android:text="@string/send"
                    android:textColor="@color/white" />

            </LinearLayout>

        </FrameLayout>

    </ScrollView>

</LinearLayout>
